Fix invisible dot

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -1,4 +1,4 @@
-﻿body.hidden {background-color:#292538;}
+body.hidden {background-color:#292538;}
 h1 {color:white; text-align:center; font-size:350%}
 h2 {font-size:388%}
 #ul {color:white; text-align:center; font-size:110%}
